2018-02-10  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpn_div_qr_1_preinv): When qp is non-NULL, reuse
	area for shifted input, to avoid an allocation.

2018-01-15 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c (gmp_popcount_limb): Micro-optimisations.
	* mini-gmp/tests/t-comb.c (checkWilson): Check also mpz_2fac_ui.

2017-12-30 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_mfac_ui, mpz_2fac_ui): New functions.
	* mini-gmp.h: Declare them.
	* mini-gmp.c (mpz_fac_ui): Use mpz_mfac_ui.

2017-07-23  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (GMP_MPN_OVERLAP_P): New macro, copy of
	MPN_OVERLAP_P, from gmp-impl.h.
	(mpn_mul): Assert that output area doesn't overlap with the input.

2017-02-03 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_sizeinbase, mpz_get_str, mpz_set_str): Support
	bases up to 62.
	* tests/t-str.c: Update tests accordingly.

2016-11-27 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_get_si): fewer branches, safer forumla for negatives.

	* tests/t-signed.c: Removed a typo

2016-11-24  Niels Möller  <nisse@lysator.liu.se>

	* tests/hex-random.c (mkseed): Produce a 48-bit mpz_t value,
	regardless of word size.
	(hex_random_init): Use gmp_randseed instead of gmp_randseed_ui,
	and support seeds exceeding an unsigned long.

	* tests/hex-random.c (mkseed): New function, using /dev/urandom
	for random seed when available.
	(hex_random_init): Use it.

2016-11-23  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (GMP_CMP): New macro.
	(mpz_sgn, mpz_cmp_si, mpz_cmp_ui, mpz_cmpabs_ui): Use it.

2016-11-22  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-invert.c (test_3by2, test_2by1): New functions,
	extracted from testmain.
	(testmain): Add test with inputs which triggered the
	mpn_invert_3by2 bug (see 2016-11-16 entry).

2016-11-21 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/t-signed.c: compare different signs, and after overflow.
